[gd_scene load_steps=2 format=3 uid="uid://d2uada60qiwjx"]

[ext_resource type="Script" uid="uid://b0s0mg5jki2ag" path="res://player.gd" id="1_4flbx"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4flbx")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true
