[gd_scene load_steps=49 format=3 uid="uid://d2uada60qiwjx"]

[ext_resource type="Script" uid="uid://b0s0mg5jki2ag" path="res://scene/Player/player.gd" id="1_8uvvx"]
[ext_resource type="Texture2D" uid="uid://ciy7xhagag8p2" path="res://assets/SpriteSheets/Outlined_6_Cat_Dash-Sheet.png" id="2_41w3l"]
[ext_resource type="Texture2D" uid="uid://bxcdpc7nmkhd" path="res://assets/SpriteSheets/Outlined_4_Cat_Fall-Sheet.png" id="3_co0lx"]
[ext_resource type="Texture2D" uid="uid://xb2yqtbehn10" path="res://assets/SpriteSheets/Outlined_1_Cat_Idle-Sheet.png" id="4_kidpo"]
[ext_resource type="Texture2D" uid="uid://6xklscjnlyfk" path="res://assets/SpriteSheets/Outlined_3_Cat_Jump-Sheet.png" id="5_rvfjl"]
[ext_resource type="Texture2D" uid="uid://c3scge182qobq" path="res://assets/SpriteSheets/Outlined_2_Cat_Run-Sheet.png" id="8_d52sb"]
[ext_resource type="Texture2D" uid="uid://dkgpmgwxg1cs6" path="res://assets/SpriteSheets/Outlined_5_Cat_Wall_Slide-Sheet.png" id="9_38fwo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_41w3l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_41w3l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_41w3l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_41w3l")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("3_co0lx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("3_co0lx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("3_co0lx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("3_co0lx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("4_kidpo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("4_kidpo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("4_kidpo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("4_kidpo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("4_kidpo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("4_kidpo")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("4_kidpo")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("4_kidpo")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("5_rvfjl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("5_rvfjl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("5_rvfjl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("5_rvfjl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("8_d52sb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("8_d52sb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("8_d52sb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("8_d52sb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("8_d52sb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("8_d52sb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("8_d52sb")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("8_d52sb")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("8_d52sb")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("8_d52sb")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("9_38fwo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("9_38fwo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("9_38fwo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6w8y"]
atlas = ExtResource("9_38fwo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yem3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}],
"loop": true,
"name": &"dash",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}],
"loop": true,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6w8y")
}],
"loop": true,
"name": &"wallslide",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b26j0"]
size = Vector2(9, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0aa2"]
size = Vector2(13, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uvvx"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_41w3l"]
size = Vector2(9, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_co0lx"]
size = Vector2(8, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kidpo"]
size = Vector2(10, 19)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_8uvvx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_yem3p")
animation = &"wallslide"
frame_progress = 0.95995

[node name="CollisionStand" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_b26j0")

[node name="CollisionRun" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_i0aa2")

[node name="CollisionDash" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_8uvvx")

[node name="CollisionJump" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 3.5)
shape = SubResource("RectangleShape2D_41w3l")

[node name="CollisionFall" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_co0lx")

[node name="CollisionWallSlide" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(4, 2.5)
shape = SubResource("RectangleShape2D_kidpo")
one_way_collision_margin = 0.0

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DoubleDashCooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
